--- a/fbtestng/test-output/index.html
+++ b/fbtestng/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite1" class="navigator-link ">
-                    <span>D:\eclipse-workspace\fbtestng\testng.xml</span>
+                    <span>C:\Users\Hitesh\git\mavenprojectrepo\fbtestng\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -136,7 +136,7 @@
         </div> <!-- panel Suite1 -->
         <div panel-name="test-xml-Suite1" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\eclipse-workspace\fbtestng\testng.xml</span>
+            <span class="header-content">C:\Users\Hitesh\git\mavenprojectrepo\fbtestng\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -190,12 +190,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'validcredential')
 data.setCell(0, 2, 'fbpackage.LoginPageTestCase')
-data.setCell(0, 3, 341);
+data.setCell(0, 3, 469);
 window.suiteTableData['Suite1']= { tableData: data, tableDiv: 'times-div-Suite1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 341 ms</span>
+              <span class="suite-total-time">Total running time: 469 ms</span>
               <div id="times-div-Suite1">
               </div> <!-- times-div-Suite1 -->
             </div> <!-- times-div -->
@@ -228,11 +228,11 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">validcredential</span>
-                <span class="method-start">3065 ms</span>
+                <span class="method-start">3772 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closing</span>
-                <span class="method-start">3421 ms</span>
+                <span class="method-start">4252 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
